--- a/src/css/CardList.css
+++ b/src/css/CardList.css
@@ -15,6 +15,7 @@
 }
   
 .card {
+    position: relative;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -32,6 +33,7 @@
 }
 
 .card-content {
+    position: relative;
     text-decoration: none;
     color: black;
 }
@@ -60,37 +62,22 @@
     transform: scale(1.3);
 }
 
-.search-bar {
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    border: none;
-    padding: 15px;
-    color: #666;
-    width: 100%;
-    position: relative;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-indent: 20px;
+.card-star-img {
+    position: absolute;
+    top: 25px;
+    right: 25px;
 }
 
-.search-bar-image {
+.card-kebab-img {
     position: absolute;
-    cursor: pointer;
-    left: 220px;
-    top: 307px;
+    right: 0;
+    top: 10px;
 }
 
 @media (max-width: 1124px) {
     .card-container {
         padding-left: 32px;
         padding-right: 32px;
-    }
-
-    .search-bar-image {
-        position: absolute;
-        cursor: pointer;
-        left: 50px;
-        top: 307px;
     }
 
     .card-list {
