--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
+    height: 250px;   
 }
 
 .profile img {
