--- a/src/colors.css
+++ b/src/colors.css
@@ -1,13 +1,18 @@
 :root {
-  --color-primary: #6d6afe;
-  --color-red: #ff5b56;
-  --color-sky: #6AE3FE;
-  --color-black: #111322;
-  --color-white: #ffffff;
-  --color-white-off: #f5f5f5;
-  --color-grey5: #3e3e43;
-  --color-grey4: #9FA6B2; 
-  --color-grey3: #CCD5E3;
-  --color-grey2: #E7EFFB;
-  --color-grey1: #F0F6FF;
+  --primary: #6d6afe;
+  --red: #ff5b56;
+  --black: #111322;
+  --white: #ffffff;
+
+  --gray100: #373740;
+  --gray60: #9fa6b2;
+  --gray20: #ccd5e3;
+  --gray10: #e7effb;
+  --gray-light: #f5f5f5;
+
+  --light-blue: #f0f6ff;
+
+  --text-gray: #676767;
+  --text-content-gray: #666666;
+  --text-content-black: #333333;
 }
