--- a/signin/sign.css
+++ b/signin/sign.css
@@ -56,12 +56,16 @@ header {
   background-color: var(--background);
 }
 
-.login-button {
+.btn-primary {
   height: 53px;
   padding: 16px 20px;
   gap: 10px;
-  background-image: linear-gradient(90.99deg, var(--primary) 0.12%, #6AE3FE 101.84%);
-  color: #F5F5F5;
+  background-image: linear-gradient(
+    90.99deg,
+    var(--primary) 0.12%,
+    #6ae3fe 101.84%
+  );
+  color: #f5f5f5;
   font-weight: 600;
   font-size: 18px;
   line-height: 21.48px;
