--- a/src/components/Addlink/index.module.css
+++ b/src/components/Addlink/index.module.css
@@ -1,4 +1,4 @@
-@import "../../global.css";
+@import '../../global.css';
 
 .addLinkBar {
   position: relative;
@@ -59,6 +59,6 @@
   font-weight: 600;
   position: absolute;
   right: 2rem;
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
 }
