--- a/src/modal/modalDelete.css
+++ b/src/modal/modalDelete.css
@@ -47,7 +47,7 @@
   margin-bottom: 2.4rem;
 }
 
-.action-button {
+.delete-action-button {
   display: flex;
   justify-content: center;
   align-items: center;
