--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,17 +1,24 @@
 .modalContainer {
   z-index: 3;
-  display: flex;
+  display: inline-flex;
+  padding: 32px 40px;
   flex-direction: column;
-  background-color: #fff;
-  box-shadow: 0px 16px 20px 0px rgba(48, 48, 48, 0.62);
-  padding: 30px;
-  gap: 12px;
-  width: 300px;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 
+  background-color: #fff;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  border-radius: 16px;
-  font-size: 18px;
+  border-radius: 15px;
+  border: 1px solid #ccd5e3;
+}
+
+.modalText {
+  color: #373740;
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: 700;
 }
