--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -6,14 +6,11 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
-
   background-color: #fff;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
   border-radius: 15px;
   border: 1px solid #ccd5e3;
+
+  position: relative;
 }
 
 .modalText {
@@ -21,4 +18,13 @@
   font-family: Pretendard;
   font-size: 20px;
   font-weight: 700;
+}
+
+.closeButton {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 16px;
+  right: 16px;
+  background-image: url(../../assets/images/close.png);
 }
