--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,23 +1,22 @@
 .modalContainer {
   z-index: 3;
-  display: inline-flex;
+  background-color: #fff;
+  border-radius: 15px;
+  border: 1px solid #ccd5e3;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.modalWrapper {
+  display: flex;
   padding: 32px 40px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 24px;
-  background-color: #fff;
-  border-radius: 15px;
-  border: 1px solid #ccd5e3;
-
   position: relative;
-}
-
-.modalText {
-  color: #373740;
-  font-family: Pretendard;
-  font-size: 20px;
-  font-weight: 700;
 }
 
 .closeButton {
