style: Apply border color to focused modal input

--- a/src/components/ModalContents/ModalContents.module.css
+++ b/src/components/ModalContents/ModalContents.module.css
@@ -20,6 +20,9 @@
   align-items: center;
   border-radius: 8px;
   border: 1px solid #ccd5e3;
+  &:focus {
+    border: 1px solid#6d6afe;
+  }
 }
 
 .modalHeader {
