--- a/src/components/ModalContents/ModalContents.module.css
+++ b/src/components/ModalContents/ModalContents.module.css
@@ -34,7 +34,37 @@
   line-height: normal;
 }
 
+.modalHeaderWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.modalSubHeader {
+  color: #9fa6b2;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
 .modalButton {
   font-size: 16px;
   padding: 16px 20px;
+}
+
+.deleteButton {
+  display: flex;
+  width: 280px;
+  padding: 16px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #ff5b56;
+  color: #f5f5f5;
+  font-family: 'Pretendard', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
 }
