--- a/src/modal/modalDelete.module.css
+++ b/src/modal/modalDelete.module.css
@@ -47,7 +47,7 @@
   margin-bottom: 2.4rem;
 }
 
-.delete-action-button {
+.delete__action__button {
   display: flex;
   justify-content: center;
   align-items: center;
