--- a/src/modal/modalFolder.module.css
+++ b/src/modal/modalFolder.module.css
@@ -33,7 +33,7 @@
   z-index: 5;
 }
 
-input {
+.modal__content__body > input {
   border: 1px solid var(--primary);
   border-radius: 0.8rem;
   padding: 1.8rem 1.5rem;
@@ -49,7 +49,7 @@ input {
   font-weight: 700;
 }
 
-.action-button {
+.actionButton {
   display: flex;
   justify-content: center;
   align-items: center;
