--- a/src/Components/Article/Article.module.css
+++ b/src/Components/Article/Article.module.css
@@ -1,5 +1,5 @@
-@import "../../global.css";
-@import "../../reset.css";
+@import '../../global.css';
+@import '../../reset.css';
 
 .folder_info_container {
     width: 100%;
