--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -1,5 +1,5 @@
-@import "../../global.css";
-@import "../../reset.css";
+@import '../../global.css';
+@import '../../reset.css';
 
 /* c a r d */
 .card_grid_container {
@@ -19,7 +19,6 @@
     border-radius: 15px;
     text-align: center;
     position: relative;
-    overflow: hidden;
 }
 
 .card:active {
@@ -48,12 +47,12 @@
     align-items: center;
     overflow: hidden;
     cursor: pointer;
+    border-radius: 15px 15px 0 0;
 }
 
 .card_img {
     width: 100%;
     height: 100%;
-    border-radius: 15px 15px 0 0;
     object-fit: cover;
 }
 
@@ -89,6 +88,7 @@
     padding: 15px 20px;
     display: flex;
     flex-direction: column;
+    position: relative;
     justify-content: space-between;
 }
 
@@ -108,16 +108,31 @@
 }
 
 /* 모달 */
-.modal {
+.popover {
+    position: absolute;
+    top: 30px;
+    right: -60px;
+    z-index: 1;
     width: 100px;
     height: 64px;
     background-color: var(--white);
 }
 
-.modal_content {
+.popover_content {
     width: 100%;
-    height: 31px;
+    height: 32px;
     padding: 7px 12px;
+    cursor: pointer;
+    color: #333236;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popover_content:hover {
+    background-color: var(--gray4);
+    color: var(--primary);
 }
 
 .card_info_txt {
@@ -172,5 +187,8 @@
     .card_grid_container {
         grid-template-columns: repeat(1, 1fr);
         gap: 40px 20px;
+    }
+    .popover {
+        right: 20px;
     }
 }
