--- a/src/components/CardListItem.css
+++ b/src/components/CardListItem.css
@@ -2,16 +2,6 @@ a {
   text-decoration: none;
 }
 
-.CardLinkList {
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 340px);
-  place-items: center;
-  justify-content: center;
-  grid-gap: 25px 20px;
-  list-style: none;
-}
-
 .CardListItem {
   position: relative;
   width: 340px;
@@ -19,7 +9,7 @@ a {
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   border-radius: 15px;
   gap: 20px 25px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .CardListItem:hover {
