--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,20 +1,47 @@
-a {text-decoration:none; color: inherit;}
-a:hover {text-decoration:none;}
-cite, cite a:link, cite a:visited {color:#202124;font-style:normal}
-button {background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; margin: 0; overflow:visible; cursor:pointer;}
-ul li {list-style:none}
-ol, ul, li {margin:0;padding:0;}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  text-decoration: none;
+}
+cite,
+cite a:link,
+cite a:visited {
+  color: #202124;
+  font-style: normal;
+}
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  cursor: pointer;
+}
+ul li {
+  list-style: none;
+}
+ol,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
 
 body:lang(ko) {
-    font-family: Pretendard,Helvetica,Arial,sans-serif;
-    font-size: 16px;
+  font-family: Pretendard, Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 *:focus {
-    outline: 0;
+  outline: 0;
 }
