--- a/src/global.css
+++ b/src/global.css
@@ -1,48 +1,56 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-family: "Pretendard";
     font-weight: 400;
     font-style: normal;
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.eot");
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.eot?#iefix")
+            format("embedded-opentype"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.woff2")
+            format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.woff")
+            format("woff"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.ttf")
+            format("truetype");
+    font-display: swap;
 }
 
 /* Color Define */
 :root {
-    --primary: #6D6AFE;
-    --red: #FF5B56;
+    --primary: #6d6afe;
+    --red: #ff5b56;
     --black: #111322;
-    --white: #FFFFFF;
-    --gray1: #3E3E43;
-    --gray2: #9FA6B2;
-    --gray3: #CCD5E3;
-    --gray4: #E7EFFB;
-    --gray5: #F0F6FF;
-}  
+    --white: #ffffff;
+    --gray1: #3e3e43;
+    --gray2: #9fa6b2;
+    --gray3: #ccd5e3;
+    --gray4: #e7effb;
+    --gray5: #f0f6ff;
+}
 
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: "Pretendard-Regular";
+    font-family: "Pretendard";
     font-size: 1rem;
     -webkit-user-select: none; /* Chrome, Safari, Opera */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; 
+    user-select: none;
 }
-  
+
 a {
     color: inherit;
     text-decoration: none;
     cursor: pointer;
 }
-  
+
 input:focus {
     outline: none;
 }
-  
+
 button {
     border: none;
     padding: unset;
     background-color: unset;
     cursor: pointer;
 }
-  
