Design: 모바일 스타일 수정

--- a/src/Components/FolderMain/FolderMain.module.css
+++ b/src/Components/FolderMain/FolderMain.module.css
@@ -1,5 +1,5 @@
-@import '../../global.css';
-@import '../../reset.css';
+@import "../../global.css";
+@import "../../reset.css";
 
 /* m a i n */
 .main {
@@ -118,9 +118,6 @@ input:focus {
     display: flex;
     align-items: center;
     gap: 4px;
-    color: #9fa6b2;
-    font-size: 14px;
-    font-weight: 600;
     cursor: pointer;
 }
 
@@ -150,6 +147,12 @@ input:focus {
     background-color: var(--gray4);
 }
 
+.icon_text {
+    color: #9fa6b2;
+    font-size: 14px;
+    font-weight: 500;
+}
+
 /* tablet */
 @media (min-width: 768px) and (max-width: 1199px) {
     .section {
@@ -176,5 +179,16 @@ input:focus {
         color: var(--white);
         border: 1px solid var(--white);
         font-size: 16px;
+    }
+
+    .active_button {
+        width: 160px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .icon_text {
+        display: none;
     }
 }
