--- a/src/modals/modalComponentStyle.module.css
+++ b/src/modals/modalComponentStyle.module.css
@@ -58,8 +58,30 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.modal__input {
+  display: flex;
+  width: 250px;
+  padding: 18px 15px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
+  background: var(--Linkbrary-white, #fff);
+  color: var(--Linkbrary-gray60, #9fa6b2);
 
-.modal__deleteButton {
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.modal__Button {
   display: flex;
   width: 280px;
   padding: 16px 20px;
@@ -74,6 +96,13 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  background: var(--Linkbrary-red, #ff5b56);
   cursor: pointer;
+}
+
+.delete {
+  background: var(--Linkbrary-red, #ff5b56);
+}
+
+.edit {
+  background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg));
 }
