--- a/src/components/ModalContents/ModalContents.module.css
+++ b/src/components/ModalContents/ModalContents.module.css
@@ -52,6 +52,7 @@
 }
 
 .modalButton {
+  width: 100%;
   font-size: 16px;
   padding: 16px 20px;
 }
@@ -90,4 +91,43 @@
   &:hover {
     box-shadow: 0 0 10px #6ae3fe;
   }
+}
+
+.folderList {
+  width: 280px;
+  max-height: 172px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.folderNameContainer {
+  width: 100%;
+  padding: 8px;
+  display: flex;
+  gap: 8px;
+  &:hover {
+    background-color: #f0f6ff;
+    cursor: pointer;
+    color: #6d6afe;
+  }
+  &:focus {
+    background: #f0f6ff url('../../assets/images/check.svg') no-repeat top 8px
+      right 8px;
+    color: #6d6afe;
+  }
+}
+
+.folderName {
+  font-family: Pretendard;
+  font-weight: 400;
+}
+
+.linkCount {
+  color: #9fa6b2;
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
 }
