--- a/src/components/ModalContents/ModalContents.module.css
+++ b/src/components/ModalContents/ModalContents.module.css
@@ -131,3 +131,29 @@
   font-style: normal;
   font-weight: 400;
 }
+
+.toast {
+  background: #6d6afe;
+  color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+  position: fixed;
+  bottom: 60px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 1010;
+
+  @media (max-width: 767px) {
+    bottom: 90px;
+  }
+}
+
+.toast.show {
+  opacity: 1;
+}
