--- a/src/components/KebabMenu.css
+++ b/src/components/KebabMenu.css
@@ -19,6 +19,7 @@
   padding: 0;
   gap: 4px;
   list-style-type: none;
+  border-radius: 8px;
   background: var(--gray-light-gray-00, #fff);
   box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
   z-index: 1;
