--- a/src/components/LinkInput/LinkInput.css
+++ b/src/components/LinkInput/LinkInput.css
@@ -1,38 +1,49 @@
 .LinkInput-wrapper {
-    padding: 60px 320px 90px 320px;
-    background-color: #F0F6FF;
+  padding: 60px 90px;
+  background-color: #f0f6ff;
 }
 
 .LinkInput {
-    border-radius: 15px;
-    border: 1px solid var(--Linkbrary-primary-color, #6D6AFE);
-    background-color: white;
-    width: 800px;
-    margin: 0 auto;
-    padding: 16px 20px;
-    display: flex;
-    justify-content: space-between;
+  border-radius: 15px;
+  border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
+  background-color: white;
+  width: 800px;
+  margin: 0 auto;
+  padding: 16px 20px;
+  display: flex;
+  justify-content: space-between;
+
+  @media (max-width: 1000px) {
+    width: 100%;
+  }
 }
 
 .LinkInput .input-icon-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
-.LinkInput input{
-    color: #9FA6B2;
-    font-family: Pretendard;    
-    font-size: 16px;
-    font-weight: 400;
-    border-width: 0;
+.LinkInput input {
+  color: #9fa6b2;
+  font-family: Pretendard;
+  font-size: 16px;
+  font-weight: 400;
+  border-width: 0;
 }
 
-.LinkInput button {
-    width: 80px;
-    border-radius: 8px;
-    background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg, #6D6AFE 0.12%, #6AE3FE 101.84%));
-    color: #F5F5F5;
-    padding: 10px 16px;
+.add-url-button {
+  border-radius: 8px;
+  background: var(
+    --gra-purpleblue-to-skyblue,
+    linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
+  );
+  color: #f5f5f5;
+  padding: 10px 16px;
+  font-size: 14px;
+}
+
+.modal-contents {
+  width: 100%;
 }
