--- a/src/components/LinkList/Linklist.css
+++ b/src/components/LinkList/Linklist.css
@@ -1,71 +1,107 @@
 .LinkList {
-    display: grid;
-    grid-template-columns: repeat(3, 340px);
-    gap: 20px;
-    
-    @media (max-width: 1124px) {
-        grid-template-columns: repeat(2, 340px);
-    }
-    @media (max-width: 767px) {
-        grid-template-columns: repeat(1, 340px);
-    }
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
+  @media (max-width: 1124px) {
+    grid-template-columns: repeat(2, 340px);
+  }
+  @media (max-width: 767px) {
+    grid-template-columns: repeat(1, 340px);
+  }
 }
 
 .Link-info {
-    padding: 15px 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    text-align: left;
-    font-size: 13px;
-    height: 135px;
+  padding: 15px 20px;
+  display: flex;
+  gap: 10px;
+  text-align: left;
+  font-size: 13px;
+  height: 135px;
+  flex-direction: column;
+}
+
+.kebab-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 .creation-time {
-    color: #666666;
+  color: #666666;
 }
 
 .link-description {
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    display: -webkit-box;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap !important;
-    white-space: normal !important;
-    word-break: break-word;
-    font-size: 16px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap !important;
+  white-space: normal !important;
+  word-break: break-word;
+  font-size: 16px;
 }
 
 .Link-card {
-    height: 334px;
-    width: 340px;
-    overflow: hidden;
-    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
-    border-radius: 15px;
-}   
+  height: 334px;
+  width: 340px;
+  overflow: hidden;
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
+  border-radius: 15px;
+}
 
 .Link-card:hover {
-    background-color: #F0F6FF;
+  background-color: #f0f6ff;
 }
 
 .Link-card:hover .Link-image {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .Link-image-wrapper {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .Link-image {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-    overflow: hidden;
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .Link-container {
-    margin: 0 auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+.popup-wrapper {
+  box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
+  position: absolute;
+  font-size: 14px;
+  font-weight: 400;
+  width: 100px;
+  text-align: center;
+}
+
+.popup-button {
+  padding: 7px 12px;
+  background-color: white;
+}
+
+.popup-button:hover {
+  background-color: #e7effb;
+  color: #6d6afe;
+}
+
+.kebab-button {
+  position: absolute;
+  top: 230px;
+  right: 15px;
+  z-index: 2;
+}
+
+.linkItem-wrapper {
+  position: relative;
 }
