--- a/src/components/Sorting/Sorting.css
+++ b/src/components/Sorting/Sorting.css
@@ -1,35 +1,46 @@
 .sorting-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
+  justify-content: space-between;
 }
 
 .button-wrapper {
-    display: flex;
-    gap: 8px;
+  display: flex;
+  gap: 8px;
 }
 
 .button-wrapper button {
-    border-radius: 5px;
-    border: 1px solid var(--Linkbrary-primary-color, #6D6AFE);
-    background: #FFF;
-    padding: 8px 12px;
+  border-radius: 5px;
+  border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
+  background: #fff;
+  padding: 8px 12px;
 }
 
 .sort-name {
-    color: #000;
-    font-family: Pretendard;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
+  color: #000;
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .folder-name {
-    color: #000;
-    /* Linkbrary/h3-semibold */
-    font-family: Pretendard;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  color: #000;
+  /* Linkbrary/h3-semibold */
+  font-family: Pretendard;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.folder-title-wrapper {
+  display: flex;
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  color: #6d6afe;
+  font-size: 17px;
+  font-weight: 500;
 }
