--- a/src/components/ModalLayout/ModalLayout.css
+++ b/src/components/ModalLayout/ModalLayout.css
@@ -6,7 +6,7 @@
   height: 100vh;
   background: rgba(0, 0, 0, 0.4);
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
-  z-index: 1;
+  z-index: 3;
   font-size: 16px;
 }
 
@@ -22,7 +22,7 @@
   background-color: white;
   width: 360px;
   padding: 32px 40px;
-  z-index: 3;
+  z-index: 4;
   gap: 24px;
   border-radius: 15px;
   border: 1px solid var(--Linkbrary-gray20, #ccd5e3);
@@ -37,6 +37,8 @@
   font-weight: 400;
   color: #9fa6b2;
   font-size: 14px;
+  width: 100%;
+  text-align: center;
 }
 
 .modal-container input {
