폴더에 추가 모달에 폴더 리스트 데이터 뿌리기

--- a/src/components/LinkInput/LinkInput.css
+++ b/src/components/LinkInput/LinkInput.css
@@ -47,3 +47,15 @@
 .modal-contents {
   width: 100%;
 }
+
+.folder-select-wrapper {
+  max-height: 172px;
+  overflow-y: auto;
+}
+
+.folder-select {
+  font-size: 16px;
+  display: flex;
+  padding: 8px;
+  font-weight: 400;
+}
