Feat: 폴더 제목 추가

--- a/src/components/LinkItems/LinkItems.module.scss
+++ b/src/components/LinkItems/LinkItems.module.scss
@@ -9,6 +9,10 @@
   @include font(1.5rem, $color-black, 600);
 }
 
+.title {
+  height: 4.8rem;
+}
+
 .items {
   display: flex;
   justify-content: center;
