--- a/src/feature/Footer/Footer.css
+++ b/src/feature/Footer/Footer.css
@@ -1,10 +1,11 @@
 .Footer {
   display: flex;
   justify-content: center;
+  /* align-items: flex-start; */
   width: 100%;
   height: 16rem;
-  margin-top: 4rem;
   background-color: var(--black);
+  margin-top: 4rem;
 
   @media (min-width: 768px) {
     margin-top: 6rem;
@@ -12,45 +13,46 @@
 }
 
 .Footer-items {
+  width: 100%;
   display: grid;
   justify-content: space-between;
-  grid-template:
-    "footer-links sns"
+  padding: 3.2rem;
+  grid-template:/* !!! grid-template-area, rows, column 를 한번에 */
+    "links sns"
     ". ." 1fr
     "copyright .";
-  width: 100%;
-  padding: 3.2rem;
-  color: var(--text-gray);
-  font-size: 1.6rem;
   font-family: Arial;
 
   @media (min-width: 768px) {
-    grid-template: "copyright footer-links sns";
-    height: fit-content;
-    max-width: 192rem;
     padding: 3.2rem 10.4rem 0;
+    height: fit-content; /* !!! */
+    max-width: 192rem;
+    grid-template: "copyright links sns";
   }
 }
 
 .Footer-copyright {
   grid-area: copyright;
-  color: #676767;
-  font-family: Arial;
+  color: var(--text-gray);
   font-size: 1.6rem;
+  font-family: Arial;
 }
 
 .Footer-links {
-  grid-area: footer-links;
+  grid-area: links;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   column-gap: 3rem;
-  padding-right: 1.8rem;
-  color: #cfcfcf;
-  font-family: Arial;
+  color: var(--white);
   font-size: 1.6rem;
+  font-family: Arial;
 }
 
 .Footer-sns {
   grid-area: sns;
   display: flex;
   column-gap: 1.2rem;
+  justify-content: space-between;
+  align-items: center;
 }
