--- a/src/ui/CardList/CardList.css
+++ b/src/ui/CardList/CardList.css
@@ -4,11 +4,10 @@
   justify-content: center;
   width: 100%;
   max-width: 106rem;
-  row-gap: 2rem;
+  gap: 2rem;
 
   @media (min-width: 768px) {
     grid-template-columns: repeat(auto-fill, 34rem);
-    row-gap: 2.5rem;
-    column-gap: 2rem;
+    gap: 2rem;
   }
 }
