--- a/src/ui/Cta/Cta.css
+++ b/src/ui/Cta/Cta.css
@@ -1,5 +1,21 @@
-.Cta {
-  border-radius: 0.8rem;
+.button {
   background: linear-gradient(91deg, var(--primary) 0.12%, #6ae3fe 101.84%);
   color: var(--gray-light);
+  border-radius: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 7rem;
+  height: 3.7rem;
+  padding: 1rem 1.6rem;
+  font-size: 1.4rem;
+  font-weight: 600;
+
+  @media (min-width: 768px) {
+    width: 12.8rem;
+    height: 5.3rem;
+    padding: 1.6rem 2rem;
+    font-size: 1.8rem;
+  }
 }
