--- a/src/ui/SearchBar/SearchBar.css
+++ b/src/ui/SearchBar/SearchBar.css
@@ -1,11 +1,19 @@
 .SearchBar {
+  /* margin: 4rem 0; */
+  /* padding: 0 3.2rem; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.SearchBar-wrapper {
   position: relative;
   width: 100%;
+  max-width: 106rem;
 }
 
 .SearchBar-input {
   width: 100%;
-  max-width: 106rem;
   height: 4.3rem;
   padding-left: 3.8rem;
   padding-right: 1.6rem;
@@ -20,6 +28,7 @@
     line-height: 150%;
   }
 }
+
 .SearchBar-input::placeholder {
   color: var(--text-content-gray);
 }
