style: color 변수명 수정 및 추가

--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -1,23 +1,26 @@
 :root {
-  --primary-color: #6d6afe;
-  --error-color: #ff5b56;
-  --black-color: #111322;
-  --white-color: #ffffff;
-  --border-color: #ccd5e3;
-  --background-color: #f0f6ff;
+  --Linkbrary-primary: #6d6afe;
+  --Linkbrary-red: #ff5b56;
+  --Linkbrary-black: #111322;
+  --Linkbrary-white: #ffffff;
+  --Linkbrary-bg: #f0f6ff;
+  --Linkbrary-gray100: #3e3e43;
+  --Linkbrary-gray60: #9fa6b2;
+  --Linkbrary-gray20: #ccd5e3;
+  --Linkbrary-gray10: #e7effb;
 }
 
 @font-face {
-  font-family: "Abel";
-  src: url("../fonts/Abel-Regular.ttf") format("woff");
+  font-family: 'Abel';
+  src: url('../fonts/Abel-Regular.ttf') format('woff');
 }
 
 @font-face {
-  font-family: "Acme";
-  src: url("../fonts/Acme-Regular.ttf") format("woff");
+  font-family: 'Acme';
+  src: url('../fonts/Acme-Regular.ttf') format('woff');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  src: url("../fonts/PretendardVariable.ttf") format("woff");
+  font-family: 'Pretendard';
+  src: url('../fonts/PretendardVariable.ttf') format('woff');
 }
