--- a/src/folder/feature-folder-tool-bar/FolderToolBar.module.scss
+++ b/src/folder/feature-folder-tool-bar/FolderToolBar.module.scss
@@ -37,7 +37,7 @@
   z-index: $z-index-fab;
 
   @include tablet {
-    justify-self: flex-end;
+    justify-self: end;
 
     position: static;
     transform: none;
