--- a/src/components/CenterSearchBar/CenterSearchBar.module.scss
+++ b/src/components/CenterSearchBar/CenterSearchBar.module.scss
@@ -3,6 +3,14 @@
 .container {
   padding: 8rem 40rem 10rem;
   background: var(--Linkbrary-bg, #f0f6ff);
+
+  @include tablet {
+    padding: 8rem 4rem 10rem;
+  }
+
+  @include mobile {
+    padding: 8rem 6rem 10rem;
+  }
 }
 
 .SearchBar_block {
@@ -22,16 +30,22 @@
   width: 100%;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 .input {
   width: 100%;
   padding: 2rem 0;
+  @include font(1.4rem, $color-gray60, 400);
 }
 
 .button {
-  padding: 1rem;
-  background: var(--gra-purpleblue-to-skyblue, linear-gradient(91deg));
+  padding: 1rem 1.5rem;
+  margin-left: 1rem;
+  background: var(
+    --gra-purpleblue-to-skyblue,
+    linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
+  );
   border-radius: 1rem;
+  @include font(1.4rem, $color-white, 600);
 }
