--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -6,4 +6,12 @@
   align-items: center;
   padding: 2rem 20rem;
   background: var(--Linkbrary-bg, #f0f6ff);
+
+  @include tablet {
+    padding: 2rem 4rem;
+  }
+
+  @include mobile {
+    padding: 2rem 6rem;
+  }
 }
