--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -1,5 +1,9 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
+/**
+  사용방법: @include font(1.4rem, $color-gray100, 500);
+*/
+
 @mixin font($size, $color: black, $weight: 400, $font-family: "Pretendard") {
   font-family: $font-family;
   font-size: $size;
