--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -8,6 +8,7 @@ $color-gray60: #9fa6b2;
 $color-gray20: #ccd5e3;
 $color-gray10: #e7effb;
 $color-gray-light: #f5f5f5;
+$color-gray-light: #dee2e6;
 
 $color-light-blue: #f0f6ff;
 
