--- a/src/components/AddModal/AddModal.module.scss
+++ b/src/components/AddModal/AddModal.module.scss
@@ -24,7 +24,7 @@
   padding: 2.2rem 2.5rem;
 
   width: 25rem;
-  height: 15rem;
+  height: 16rem;
 
   border-radius: 0.9375rem;
   border: 1px solid $color-gray-light;
@@ -32,20 +32,6 @@
 
   h2 {
     @include font(1.5rem, $color-gray100, 700);
-  }
-
-  button {
-    display: flex;
-    width: 100%;
-    padding: 1rem 1.25rem;
-    justify-content: center;
-    align-items: center;
-    gap: 0.625rem;
-
-    border-radius: 0.5rem;
-    background: $color-red;
-
-    @include font(1.2rem, $color-gray-light, 600);
   }
 }
 
@@ -55,9 +41,37 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 0.8rem;
 
   @include font(1.2rem, $color-gray60, 400);
+
+  input {
+    width: 20rem;
+    margin-top: 0.8rem;
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+    background: $color-white;
+    border: 1px solid $color-gray20;
+    @include font(1.2rem, $color-gray100, 400);
+
+    &:hover {
+      border: 1px solid $color-primary;
+    }
+  }
+
+  button {
+    display: flex;
+    width: 100%;
+    margin-top: 1.4rem;
+    padding: 1rem 1.25rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+
+    border-radius: 0.5rem;
+    background: $color-linear-gradient;
+
+    @include font(1.2rem, $color-gray-light, 600);
+  }
 
   p {
     width: 20rem;
@@ -66,4 +80,8 @@
     white-space: nowrap;
     word-break: break-all;
   }
+}
+
+.input-text {
+  border: 1px solid $color-primary;
 }
