--- a/src/components/CenterSearchBar/CenterSearchBar.module.scss
+++ b/src/components/CenterSearchBar/CenterSearchBar.module.scss
@@ -42,10 +42,7 @@
 .button {
   padding: 1rem 1.5rem;
   margin-left: 1rem;
-  background: var(
-    --gra-purpleblue-to-skyblue,
-    linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%)
-  );
+  background: $color-linear-gradient;
   border-radius: 1rem;
   @include font(1.4rem, $color-white, 600);
 }
