--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -9,7 +9,7 @@ $color-gray20: #ccd5e3;
 $color-gray10: #e7effb;
 $color-gray-light: #f5f5f5;
 $color-gray-light: #dee2e6;
-
+$color-linear-gradient: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
 $color-light-blue: #f0f6ff;
 
 $color-text-gray: #676767;
