--- a/src/components/AddModal/AddModal.module.scss
+++ b/src/components/AddModal/AddModal.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: $modal-gray;
 }
 
 .content {
@@ -20,12 +20,9 @@
   align-items: center;
   transform: translate(-50%, -50%);
   gap: 1.5rem;
-
   padding: 2.2rem 2.5rem;
-
   width: 25rem;
   height: 16rem;
-
   border-radius: 0.9375rem;
   border: 1px solid $color-gray-light;
   background: $color-white;
