--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   border-radius: 14px;
-  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: $card-box-shadow;
 }
 
 .card-image-block {
@@ -35,8 +35,7 @@
   width: 100%;
   height: 12rem;
   padding: 1.5rem;
-  background-color: white;
-
+  background-color: $color-white;
   border-bottom-left-radius: 14px;
   border-bottom-right-radius: 14px;
 }
@@ -81,7 +80,7 @@
   flex-direction: column;
 
   background: $color-white;
-  box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
+  box-shadow: $menu-box-shadow;
 }
 
 .kebab-option {
@@ -90,7 +89,7 @@
   @include font(1.4rem, $color-gray100, 400);
 
   &:hover {
-    @include font(1.4rem, $color-primary, 400);
     background: $color-gray10;
+    @include font(1.4rem, $color-primary, 400);
   }
 }
