--- a/src/components/LinkAddSearchBar/LinkAddSearchBar.module.scss
+++ b/src/components/LinkAddSearchBar/LinkAddSearchBar.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   padding: 8rem 40rem 10rem;
-  background: var(--Linkbrary-bg, #f0f6ff);
+  background: $color-light-blue;
 
   @include tablet {
     padding: 8rem 4rem 10rem;
@@ -13,7 +13,7 @@
   }
 }
 
-.SearchBar_block {
+.searchBar-block {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -21,25 +21,25 @@
   padding: 0rem 1.25rem;
 
   border-radius: 0.9375rem;
-  border: 1px solid var(--Linkbrary-primary-color, #6d6afe);
-  background: var(--Linkbrary-white, #fff);
+  border: 1px solid $color-primary;
+  background: $color-white;
   border-radius: 1rem;
 }
 
-.link_block {
+.link-block {
   width: 100%;
   display: flex;
   align-items: center;
   gap: 0.8rem;
 }
 
-.input {
+.input-text {
   width: 100%;
   padding: 2rem 0;
   @include font(1.4rem, $color-gray60, 400);
 }
 
-.button {
+.button-text {
   padding: 1rem 1.5rem;
   margin-left: 1rem;
   background: $color-linear-gradient;
