--- a/src/components/MainSearchBar/MainSearchBar.module.scss
+++ b/src/components/MainSearchBar/MainSearchBar.module.scss
@@ -8,12 +8,12 @@
   gap: 1rem;
   padding: 0 1.4rem;
   border-radius: 1rem;
-  background: #f5f5f5;
+  background: $color-gray-light;
 }
 
-.input {
+.input-text {
   width: 100%;
   padding: 2rem 0;
-  background: #f5f5f5;
+  background: $color-gray-light;
   @include font(1.4rem, $color-text-content-gray, 400);
 }
