--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -8,10 +8,13 @@ $color-gray60: #9fa6b2;
 $color-gray20: #ccd5e3;
 $color-gray10: #e7effb;
 $color-gray-light: #f5f5f5;
-$color-gray-light: #dee2e6;
 $color-linear-gradient: linear-gradient(91deg, #6d6afe 0.12%, #6ae3fe 101.84%);
 $color-light-blue: #f0f6ff;
 
 $color-text-gray: #676767;
 $color-text-content-gray: #666666;
 $color-text-content-black: #333333;
+
+$modal-gray: rgba(0, 0, 0, 0.4);
+$card-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
+$menu-box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
