--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -18,3 +18,11 @@
   font-size: 0.875rem;
   line-height: 1.19357142857;
 }
+
+@media (max-width: 767px) {
+  /* 모바일 */
+
+  .headerEmail {
+    display: none;
+  }
+}
