--- a/styles/form.css
+++ b/styles/form.css
@@ -149,7 +149,7 @@
 @media (max-width: 767px) {
   /* 모바일 */
   .btnForm01 {
-    width: 12.5rem;
+    width: 100%;
     padding: 0.65625rem 1.375rem;
     font-size: 14px;
     line-height: 1.19357142857;
