--- a/part 2/src/component/card.css
+++ b/part 2/src/component/card.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
 }
 
-
-p {
+.card p {
   font-size: 13px;
   font-weight: 400px;
   color: #666666;
@@ -14,26 +13,35 @@ p {
   height: 334px;
   border-radius: 15px;
   box-shadow: 0px 5px 25px 0px #00000014;
-
+  position: relative;
 }
 
-.card img {
+.cardImg {
   width: 100%;
   height: 200px;
   border-radius: 15px 15px 0 0;
   object-fit: cover;
 }
 
+.starIcon {
+  width: 32px;
+  height: 33.82px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
 .card-text {
   display: flex;
-  flex-direction: column;             
+  flex-direction: column;
   width: 100%;
   height: 135px;
   padding: 15px 20px 15px 20px;
   gap: 10px;
+  position: relative;
 }
 
-.card-text h4{
+.card-text h4 {
   height: 49px;
   white-space: normal;
   display: -webkit-box;
@@ -42,10 +50,48 @@ p {
   overflow: hidden;
 }
 
-@media (max-width: 1199px) {
+.dropdownBtn {
+  width: 21px;
+  height: 17px;
+  top: 15px;
+  right: 20px;
+  position: absolute;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border: 0;
+  background-color: transparent;
+}
 
+.dropdownContent {
+  position: absolute;
+  top: 38px;
+  left: 290px;
+  box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
+  background: rgba(255, 255, 255, 1);
+  font-family: Pretendard;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.71px;
+  text-align: center;
+  z-index: 2;
+}
+
+.dropdownContent li {
+  width: 100px;
+  float: left;
+  height: 31px;
+  padding: 7px 12px;
+  gap: 10px;
+}
+
+.dropdownContent li:hover {
+  background: rgba(231, 239, 251, 1);
+  color: #6d6afe;
+}
+
+@media (max-width: 1199px) {
 }
 
 @media (max-width: 767px) {
-
 }
