--- a/part 2/src/component/header.css
+++ b/part 2/src/component/header.css
@@ -2,11 +2,11 @@ header {
   width: 100%;
   height: 93px;
   padding: 33px 200px;
-  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #f0f6ff;
+  z-index: 1;
 }
 
 header .user-profile {
