--- a/part 2/src/component/main.css
+++ b/part 2/src/component/main.css
@@ -1,5 +1,5 @@
 .main {
-  padding: 93px 0 0;
+  padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -11,4 +11,42 @@
   .main {
     padding: 63px 0 0;
   }
+}
+.folderTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.itemManager {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  color: #9fa6b2;
+  font-family: Pretendard;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.itemManager div {
+  margin: auto;
+}
+
+.linkAddInput {
+  width: 100%;
+  padding: 60px 0 90px;
+  display: flex;
+  justify-content: center;
+  background: var(--Linkbrary-bg, #f0f6ff);
+}
+
+.folderArticleTitle {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.2px;
 }
