styled: 전체적인 스타일 맞추기

--- a/weekly-mission/next-project/pages/ActionButton/ActionButton.module.css
+++ b/weekly-mission/next-project/pages/ActionButton/ActionButton.module.css
@@ -4,9 +4,6 @@
   color: #9fa6b2;
   background-color: white;
   border: none;
-  background-repeat: no-repeat;
-  background-position: left center;
-  background-size: 18px;
   padding-left: 20px;
   cursor: pointer;
 }
@@ -14,4 +11,17 @@
 .buttonwrapper {
   display: flex;
   gap: 12px;
+}
+
+.actionbutton {
+  display: flex;
+  gap: 4px;
+  position: relative;
+}
+
+.actionbutton_image {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 25%;
 }
