--- a/weekly-mission/next-project/pages/FolderMenuList/FolderMenuList.module.css
+++ b/weekly-mission/next-project/pages/FolderMenuList/FolderMenuList.module.css
@@ -9,8 +9,8 @@
   padding: 8px 12px;
   border-radius: 5px;
   border: 1px solid #6d6afe;
-  background-color: "#ffffff";
-  color: "#000000";
+  background-color: #ffffff;
+  color: #000000;
   font-size: 16px;
   font-weight: 400;
   max-width: 150px;
