--- a/weekly/styles/Nav.module.css
+++ b/weekly/styles/Nav.module.css
@@ -1,5 +1,5 @@
 .logo {
-  background-image: url(../../assets/logo.svg);
+  background-image: url('../assets/logo.svg');
   flex: 0 0 133px;
   height: 24px;
   background-size: cover;
