--- a/components/SearchInput.module.css
+++ b/components/SearchInput.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 40px;
+  margin: 40px 0;
 }
 
 .SearchForm__searchWrap {
