Fix: 옮기변서 생긴 에러 수정 및 정리

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ section {
 
 html,
 body {
-  /* min-width: $ {theme.screenSize.minWidth}; */
+  min-width: 18.75rem;
   font-size: 16px;
   line-height: 1;
   font-family: 'Pretendard-Regular',
