--- a/components/IdInput/index.module.css
+++ b/components/IdInput/index.module.css
@@ -1,6 +1,6 @@
 .input__wrapper {
   position: relative;
-  width: 350px;
+  width: 100%;
   height: 60px;
 }
 
@@ -29,5 +29,4 @@
   font-size: 14px;
   line-height: 16.8px;
   color: var(--red);
-  margin-top: 6px;
 }
