--- a/components/PasswordInput/index.module.css
+++ b/components/PasswordInput/index.module.css
@@ -1,6 +1,6 @@
 .input__wrapper {
   position: relative;
-  width: 350px;
+  width: 100%;
   height: 60px;
 }
 
@@ -29,12 +29,11 @@
   font-size: 14px;
   line-height: 16.8px;
   color: var(--red);
-  margin-top: 6px;
 }
 
 .eye__button {
   position: absolute;
   right: 15px;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-45%);
 }
