--- a/part 2/src/component/card.css
+++ b/part 2/src/component/card.css
@@ -31,18 +31,18 @@
   right: 15px;
 }
 
-.card-text {
+.cardText {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 135px;
   padding: 15px 20px 15px 20px;
-  gap: 10px;
   position: relative;
 }
 
-.card-text h4 {
+.cardText > .font4 {
   height: 49px;
+  margin: 10px 0;
   white-space: normal;
   display: -webkit-box;
   -webkit-line-clamp: 2;
