feat: 회원가입 및 로그인 페이지 ui 구현완료 후 로직 수정중

--- a/weekly-mission/next-project/src/components/Input/InputField.module.css
+++ b/weekly-mission/next-project/src/components/Input/InputField.module.css
@@ -1,3 +1,9 @@
+.input_container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 .label {
   font-size: 14px;
 }
@@ -10,7 +16,7 @@
   padding: 18px 15px;
   border-radius: 8px;
   border: 1px solid #6d6afe;
-  margin-top: 32px;
+  background-color: white;
 }
 
 .error_wrapper {
@@ -26,7 +32,6 @@
 }
 
 .input_error {
-  margin-top: 12px;
   font-size: 14px;
   color: red;
 }
